# SmartMeterMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.MIT  README.md  notes.md  smm.cpp
src/: file_telegram_generator.cpp  smm.cpp  telegram_generator.cpp  telegram_generator.hpp  tty_telegram_generator.cpp  tty_telegram_generator.hpp
test/: file_telegram_generator.cpp  file_telegram_generator.hpp  test_smm.cpp  tests_main.cpp
